data/derived/comb/progs/unify/prog5273.ml.out
Characters 181-213:
  | Average (e',e1)      -> (eval (e',x,y) +. eval (e1,x,y))/2
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
